tests/errors/runtime/E004_circular.zy
<# ../semantic/E004_mod_a <= a

>> a::fn_a() ¶
